[package]
name = "rocksfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser = { version = "0.11", features = [ "serializable"]}
rocksdb = "0.19"
clap = { version = "3.2", features = ["cargo"] }
libc = "0.2"
toml = "0.5"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
tokio = { version = "1.20", features = ["full"] }
async-trait = "0.1"
bytes = "1.0"
bytestring = "1.0"
futures = "0.3"
lru = "0.6"
parse-size = "1.0.0"
serde = { version = "1", features = ["derive"] }
slab = "0.4.2"
thiserror = "1.0"
bincode = { version = "1.3.3", optional = true }
serde_json = { version = "1.0.79", optional = true }
paste = "1.0"

[dev-dependencies]
fuser = "0.11"
rocksdb = "0.19"
clap = { version = "3.2", features = ["cargo"] }
libc = "0.2"
env_logger = "0.9"

[features]
default = ["binc"]

binc = ["bincode"]
json = ["serde_json"]